# octomind-ui

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  index.html  package-lock.json  package.json  tauri.conf.json  vite.config.js
capabilities/: default.json
src/: App.svelte  app.css  main.js  stores.js
src-tauri/src/: commands.rs  main.rs
src/components/: ChatArea.svelte  MessageInput.svelte  SessionForm.svelte  SessionHeader.svelte  SessionList.svelte
src/lib/: tauri.js
tests/: integration_test.rs
